[package]
name = "saltycrab"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-aux = "4.0"
sqlx = { version = "0.6", features = [ "sqlite", "runtime-tokio-rustls" ] }